# Sales_Report_Generator

./: Makefile  README.md  pyproject.toml  report_generator.py  setup.cfg  variables.json
sales_report_generator/: __init__.py  format.py  format_report.py  gui.py  load.py  report_generator.py  sales_report_engine copy.py  sales_report_engine.py  variables.json
sales_report_generator/scripts/: sales_report.py  sales_report_generator.py
tests/: test_format.py  test_report_generator.py  test_sales_report_generator.py
tests/fixtures/: result_1.txt  result_2.txt  stocks_1.xlsx  stocks_2.xlsx
